# HW_Netology-Cpp

./: .gitignore
Coursework 3. Racing simulator_CMake/RaceSim/: CMakeLists.txt  main.cpp
Lesson 3.1-IDE/: Lesson 3.1-IDE.sln
Lesson 3.1-IDE/Task_1/: Task_1.cpp  Task_1.vcxproj
Lesson 3.10 - CMake/Task_1 - simple project/: CMakeLists.txt  main.cpp
Lesson 3.10 - CMake/Task_2 - difficult project/: CMakeLists.txt  Figure.h  IsoscelesTriangle.cpp  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectang.h  RightTriangle.h  Rombus.cpp  Triangle.cpp  main.cpp
Lesson 3.11 - Libraries/Task_5 - class hierarchy in DLL and CMake/ClientFiguresCMake/CMakeFigureDLL/: CMakeFigureDLL.vcxproj  CMakeFigureDLL.vcxproj.filters  CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectang.h  RightTriangle.h  Rombus.h  Square.h  Triangle.h  print_info.cpp  print_info.h
Lesson 3.2 - enum_struct/: Lesson 3.2 - enum_struct.sln
Lesson 3.3 - class/: Lesson 3.3 - class.sln
Lesson 3.3 - class/Task 1/: main.cpp  (+1 more)
Lesson 3.4 - OOP p.1/: Lesson 3.4 - OOP p.1.sln
Lesson 3.5 - OOP p.2/: Lesson 3.5 - OOP p.2.sln
Lesson 3.6 - Multi-file projects and libs/: Lesson 3.6 - Multi-file projects and libs.sln
Lesson 3.7 - preprocessor and macros/: Lesson 3.7 - preprocessor and macros.sln
Lesson 3.8 - Exceptions and error handling/: Lesson 3.8 - Exceptions and error handling.sln
Lesson 3.9 - Operator overloading/: Lesson 3.9 - Operator overloading.sln
(+135 files in other folders)
